[gd_scene load_steps=2 format=3 uid="uid://cseg58s6iol3m"]

[ext_resource type="Script" path="res://scripts/menus/test_menu.gd" id="1_mr4tx"]

[node name="TestMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mr4tx")

[node name="TestContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -43.0
offset_right = 48.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="CheckButton" type="CheckButton" parent="TestContainer"]
layout_mode = 2

[node name="TestLabel" type="Label" parent="TestContainer"]
layout_mode = 2
text = "Off"

[node name="MainMenuButton" type="Button" parent="TestContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
text = "Main Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 352.0
offset_top = 187.0
offset_right = 448.0
offset_bottom = 210.0
text = "Edit Box"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 2
offset_left = 350.0
offset_top = 234.0
offset_right = 456.0
offset_bottom = 273.0
text = "Test"

[connection signal="toggled" from="TestContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="TestContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
